<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputDataActivity"
    android:orientation="vertical"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/card_background"
        android:layout_marginTop="100dp"
        android:paddingTop="20dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:layout_margin="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/num_card"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
                <EditText
                    android:id="@+id/card_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="20dp"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:hint="@string/num_card_hint"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/month_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:height="20dp"
                        android:width="25dp"
                        android:hint="@string/month_hint"
                        android:textSize="12sp"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/slash"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingTop="10dp"/>

                    <EditText
                        android:id="@+id/year_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:height="20dp"
                        android:width="40dp"
                        android:hint="@string/year_hint"
                        android:textSize="12sp"
                        android:paddingStart="5dp"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cvv"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
                <EditText
                    android:gravity="center"
                    android:id="@+id/cvv_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="35dp"
                    android:height="20dp"
                    android:hint="@string/cvv_hint"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_holder"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
                <EditText
                    android:id="@+id/card_holder_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="20dp"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:hint="@string/card_holder_hint"
                    android:inputType="textCapWords"/>
            </LinearLayout>
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/mastercard_visa"
               android:layout_weight="1"
               android:layout_gravity="bottom"
               />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:text="@string/btn_save"
        android:onClick="onBtnSaveClicked"
        android:background="@drawable/card_background"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/warning"/>
</LinearLayout>